force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>Order header object for managing customer orders with support for multi-line items, taxation, shipping, and payment terms</description>
    <label>Order</label>
    <nameField>
        <displayFormat>ORD-{00000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>