force-app/main/default/objects/Order__c/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <description>Expected delivery date for the complete order</description>
    <inlineHelpText>Expected date when the complete order will be delivered to the customer.</inlineHelpText>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>