force-app/main/default/objects/Order__c/fields/Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Count__c</fullName>
    <description>Number of line items in this order</description>
    <inlineHelpText>Automatically calculated count of line items in this order.</inlineHelpText>
    <label>Line Item Count</label>
    <summarizedField>Order_Line_Item__c.Id</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>