force-app/main/default/objects/Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date when the order was placed by the customer</description>
    <inlineHelpText>The date this order was placed. Defaults to today's date.</inlineHelpText>
    <label>Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>