force-app/main/default/objects/Order__c/fields/Order_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Discount_Amount__c</fullName>
    <description>Calculated order-level discount amount</description>
    <formula>IF(AND(NOT(ISBLANK(Subtotal__c)), NOT(ISBLANK(Order_Discount_Percentage__c))), 
    Subtotal__c * Order_Discount_Percentage__c, 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated as Subtotal × Order Discount Percentage.</inlineHelpText>
    <label>Order Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>