force-app/main/default/objects/Order__c/fields/Order_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Order_Discount_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Order-level discount percentage applied to the entire order</description>
    <inlineHelpText>Apply an order-level discount percentage. This is in addition to any line-item discounts.</inlineHelpText>
    <label>Order Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>