force-app/main/default/objects/Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <description>Current status of the order in the fulfillment process</description>
    <inlineHelpText>Track the order through the fulfillment process from draft to delivery.</inlineHelpText>
    <label>Order Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Order_Status</valueSetName>
    </valueSet>
</CustomField>