force-app/main/default/objects/Order__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority level for order processing and fulfillment</description>
    <inlineHelpText>Set the priority level to determine processing order and delivery timeline.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Order_Priority</valueSetName>
    </valueSet>
</CustomField>