force-app/main/default/objects/Order__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Shipping address for this order (can differ from customer billing address)</description>
    <inlineHelpText>Enter the shipping address for this order. Leave blank to use the customer's default address.</inlineHelpText>
    <label>Shipping Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>