force-app/main/default/objects/Order__c/fields/Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Shipping and handling cost for this order</description>
    <inlineHelpText>Enter the shipping cost for this order. Defaults to $0 for local pickup or free shipping promotions.</inlineHelpText>
    <label>Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>