force-app/main/default/objects/Order__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <description>Sum of all line item totals before tax and shipping</description>
    <inlineHelpText>Automatically calculated from all line items in this order.</inlineHelpText>
    <label>Subtotal</label>
    <summarizedField>Order_Line_Item__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>