force-app/main/default/objects/Order__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <description>Calculated tax amount based on subtotal and tax rate</description>
    <formula>IF(AND(NOT(ISBLANK(Subtotal__c)), NOT(ISBLANK(Tax_Rate__c))), 
    Subtotal__c * Tax_Rate__c, 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated as Subtotal × Tax Rate.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>