force-app/main/default/objects/Order__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <defaultValue>8.25</defaultValue>
    <description>Tax rate percentage applied to this order</description>
    <inlineHelpText>Tax rate applied to this order. Defaults to 8.25% but can be adjusted based on customer location or tax exemptions.</inlineHelpText>
    <label>Tax Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>