force-app/main/default/objects/Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Final total amount for the order including tax and shipping, minus discounts</description>
    <formula>BLANKVALUE(Subtotal__c, 0) + 
BLANKVALUE(Tax_Amount__c, 0) + 
BLANKVALUE(Shipping_Cost__c, 0) - 
BLANKVALUE(Order_Discount_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Final order total: Subtotal + Tax + Shipping - Order Discount.</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>